# Kahoot

./: .gitignore  README.md
Kahoot_client/: CMakeLists.txt  connectscreen.cpp  connectscreen.h  connectscreen.ui  createQuestion.ui  createquestion.cpp  createquestion.h  createquestion.ui  createquiz.cpp  createquiz.h  createquiz.ui  currentscores.cpp  currentscores.h  currentscores.ui  gamestate.cpp  gamestate.h  gamestate.ui  joinquiz.cpp  joinquiz.h  joinquiz.ui  lobby.cpp  lobby.h  lobby.ui  mainwindow.cpp  mainwindow.ui  questionscreen.cpp  questionscreen.h  questionscreen.ui  scores.cpp  scores.h  scores.ui  startquiz.cpp  startquiz.h  startquiz.ui
cmake/: CMakeLists.txt
master/: a.out  auxilaries.hpp  client.cpp  client.hpp  game.cpp  game.hpp  games.cpp  games.hpp  main.cpp  message.hpp  player.cpp  player.hpp  questions.cpp  questions.hpp  server.cpp  server.hpp
